Split Resolver and TypeInvoker implementation